Fixed screen top not shwoing on smaller devices

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -69,4 +69,9 @@ h2 {
     .card-container {
         flex-direction: column;
     }
+
+    .container {
+        height: 100%;
+
+    }
 }
